test/scripted/compilation2/errors/cannot_coerce_int_literal.bnj
# test:subtest
# test:error 5:18 "cannot coerce int literal to type 'f32'"

func main() {
    var a: f32 = 1;
}

# test:subtest
# test:error 14:16 "cannot coerce int literal to type 'S'"

struct S {}

func main() {
    var a: S = 1;
}
